# Quant_Agent

./: .gitignore  README.md  create_desktop_launcher.command  pyproject.toml
apps/backtest/: .gitignore  README.md  manage_universe.py  optimize.py  requirements.txt  run_backtest.py
apps/backtest/config/: universe.yaml
apps/backtest/paper_trades/: dashboard.html
apps/backtest/src/: __init__.py  backtest_engine.py  config_loader.py  data_manager.py  metrics.py  strategy_optimizer.py  universe_manager.py  visualizer.py
apps/backtest/strategies/: __init__.py  inflection_strategy.py  long_short_bt.py
apps/filter/: README.md  app.py  filter_engine.py  requirements.txt
apps/fundamental/: README.md  app.py  fundamental_engine.py  requirements.txt  slow_engine.py
apps/portfolio/: app.py
apps/trading/: README.md  app.py  create_desktop_launcher.command  fast_engine.py  requirements.txt  slow_engine.py  trading_analysis.py  trading_charts.py  trading_data.py  trading_ui.py
config/: alert_rules.yaml  inflection_scan.yaml  supply_chain_map.yaml
daemon/: alert_worker.py  inflection_scanner.py
data/: quant_system.duckdb
docs/: P0_BASELINE.md
shared/: agent_memory.py  alternative_signals.py  capital_flow_signals.py  cross_asset_signals.py  data_provider.py  db_manager.py  inflection_detector.py  knowledge_graph.py  macro_cycle.py  market_sentiment.py  multi_agent_analyzer.py  regime_detector.py  technical_structure.py  ui_shell.py  utils.py  valuation_engine.py  valuation_percentile.py
tests/: test_inflection_detector.py  test_valuation_engine.py
(+30 files in other folders)
