[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent"
version = "0.1.0"
description = "Local quant research workspace with screening, fundamental analysis, trading, and backtest modules."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.37,<2.0",
    "akshare>=1.13,<2.0",
    "APScheduler>=3.10,<4.0",
    "requests>=2.31,<3.0",
    "aiohttp>=3.10,<4.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scikit-learn>=1.3,<2.0",
    "hmmlearn>=0.3.0,<1.0",
    "openai>=1.40,<2.0",
    "yfinance>=0.2,<2.0",
    "plotly>=5.15,<7.0",
    "pyyaml>=6.0,<7.0",
    "openpyxl>=3.1,<4.0",
    "duckdb>=1.0.0,<2.0.0",
    "backtrader>=1.9.78.123",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
